# ai-support-platform

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py
app/api/v1/: auth.py  chat.py  dialogs.py  users.py
app/db/: init_db.py  session.py
app/db/models/: __init__.py  dialog.py  user.py  user_session.py
app/middleware/: cookies.py
app/models/: dialog.py  user.py  user_session.py
app/services/: user_session.py  users.py
app/templates/: chat.html
app/web/: pages.py
docker/: Dockerfile  docker-compose.yml
