[project]
name = "ai-support-platform"
version = "0.1.0"
description = ""
authors = [{name = "NicTurtle", email = "nic.turtle1012@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "beanie",
    "motor",
    "pydantic",
    "openai",
    "email-validator (>=2.2.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
